...
                        android:gravity="center"
                        android:text="Album title: "
                        android:textColor="#000"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/album_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text=""
                        android:transitionName="transition_title" />
...
                        android:gravity="center"
                        android:text="Album Id: "
                        android:textColor="#000"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/id_Album"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="2" />
                </LinearLayout>
...
